--- a/angular/src/index.css
+++ b/angular/src/index.css
@@ -1,10 +1,10 @@
-body {
+.page-flexbox-wrapper {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
   }
 
-  main {
+#main {
     flex: 1 0 auto;
   }
 
