--- a/angular/src/app/todolist/todolist.component.html
+++ b/angular/src/app/todolist/todolist.component.html
@@ -1,21 +1,11 @@
 <h1>{{title}}</h1>
 <h2>My Todos</h2>
+<input class="new-todo" placeholder="What needs to be done?" autofocus
+    [(ngModel)]="newItem" (keyup.enter)="addItem()">
+<button class="add" (click)="addItem()">Add</button>
 <ul class="collapsible" data-collapsible="accordian">
-    <li *ngFor="#todo of Todos"
-    (click)="onSelect(todo)">
-      <div class="collapsible-header" >
-        <input class="toggle" type="checkbox" (click)="toggle(todo)"
-              [checked]="todo.completed">
-        <i class="material-icons">label_outline</i>{{todo.name}}
-        <span ng-non-bindable>{{todo.time | date: 'HH:mm:ss'}}</span>
-        <button class="play" [hidden]="!todo.inProgress">PLAY</button>
-        <button class="pause" [hidden]="todo.inProgress">PAUSE</button>
-
-        <a [hidden]="!todo.inProgress" class="btn-floating green">
-          <i class="material-icons">play_circle_outline</i></a>
-      </div>
-      <div class="collapsible-body">
-          <todo-detail [todo]="todo"></todo-detail>
-      </div>
-    </li>
+  <todo-detail *ngFor="#todo of Todos"
+    (click)="onSelect(todo)"
+    [todo]="todo">
+  </todo-detail>
 </ul>
