--- a/angular/src/app/todolist/todolist.component.html
+++ b/angular/src/app/todolist/todolist.component.html
@@ -3,16 +3,11 @@
 <input class="new-todo" placeholder="What needs to be done?" autofocus
     [(ngModel)]="newItem" (keyup.enter)="addItem()">
 <button class="add" (click)="addItem()">Add</button>
-<ul materialize="collapsible" class="collapsible" data-collapsible="accordian">
-  <li *ngFor="#todo of Todos"
-    (click)="onSelect(todo)">
-    <div class="collapsible-header" >
-      <todo-summary [todo]="todo">
-      </todo-summary>
-    </div>
-    <div class="collapsible-body">
-    <todo-detail [todo]="todo">
-    </todo-detail>
-  </div>
-</li>
-</ul>
+<div class="s10 offset-s1 col">
+<div class="row">
+<todo-detail *ngFor="#todo of Todos"
+    (click)="onSelect(todo)"
+    [todo]="todo">
+</todo-detail>
+</div>
+</div>
