--- a/angular/src/app/todo/todo-detail.component.html
+++ b/angular/src/app/todo/todo-detail.component.html
@@ -1,16 +1,16 @@
 
 <div class="col m4">
-  <div class="card blue-grey darken-1">
-    <div class="card-content white-text">
+  <div class="card">
+    <div class="card-content black-text">
       <span class="card-title">{{todo.name}}</span>
       <p><label>description: </label>{{todo.description}}</p>
       <p><label>estimate: </label>{{todo.estimate}}</p>
       <p><label>in progress?: </label>{{todo.inProgress}}</p>
     </div>
-    <div class="card-action">
-      <a *ngIf="todo.inProgress" class="waves-effect btn-flat"
-        (click)="pause(todo)">
-        <i class="material-icons">pause_circle_outline</i>
+        <div class="card-action">
+            <a *ngIf="todo.inProgress" class="waves-effect btn-flat"
+            (click)="pause(todo)">
+            <i class="material-icons">pause_circle_outline</i>
       </a>
       <a *ngIf="!todo.inProgress" class="waves-effect btn-flat"
         (click)="setInProgress(todo)">
