--- a/angular/src/main/app/todolist/todolist.component.html
+++ b/angular/src/main/app/todolist/todolist.component.html
@@ -5,23 +5,27 @@
         <div class="row">
             <div class="input-field col s6">
                 <i class="material-icons prefix">create</i>
-                <input id="title" type="text" class="validate" autofocus>
+                <input id="title" type="text" class="validate" autofocus required
+                [(ngModel)]="newTodo.name">
                 <label for="title">Title</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s6">
                 <i class="material-icons prefix">create</i>
-                <input id="description" type="text" class="validate">
+                <input id="description" type="text" class="validate"
+                [(ngModel)]="newTodo.description">
                 <label for="description">Description</label>
             </div>
             <div class="input-field col s6">
-                <input type="checkbox" id="inProgress" />
+                <input type="checkbox" id="inProgress" 
+                [(ngModel)]="newTodo.inProgress" />
                 <label for="inProgress">Item is in progress</label>
             </div>
         </div>
         <div class="row">
-            <a class="waves-effect waves-light btn">Create todo item</a>
+            <a class="waves-effect waves-light btn"
+            (click)="onSubmit()">Create todo item</a>
         </div>
     </form>
 </div>
