--- a/angular/src/main/app/todolist/todolist.component.html
+++ b/angular/src/main/app/todolist/todolist.component.html
@@ -6,7 +6,7 @@
             <div class="input-field col s6">
                 <i class="material-icons prefix">create</i>
                 <input id="title" type="text" class="validate" autofocus required
-                [(ngModel)]="newTodo.name">
+                [(ngModel)]="newTodo.name" placeholder="What needs to be done?">
                 <label for="title">Title</label>
             </div>
         </div>
@@ -14,7 +14,7 @@
             <div class="input-field col s6">
                 <i class="material-icons prefix">create</i>
                 <input id="description" type="text" class="validate"
-                [(ngModel)]="newTodo.description">
+                [(ngModel)]="newTodo.description" required>
                 <label for="description">Description</label>
             </div>
             <div class="input-field col s6">
