--- a/angular/src/main/app/todolist/todolist.component.html
+++ b/angular/src/main/app/todolist/todolist.component.html
@@ -6,7 +6,7 @@
             <div class="input-field col s6">
                 <i class="material-icons prefix">create</i>
                 <input id="title" type="text" class="validate" autofocus required
-                [(ngModel)]="newTodo.name" placeholder="What needs to be done?">
+                [(ngModel)]="pendingTodo.name" placeholder="What needs to be done?">
                 <label for="title">Title</label>
             </div>
         </div>
@@ -14,22 +14,22 @@
             <div class="input-field col s6">
                 <i class="material-icons prefix">create</i>
                 <input id="description" type="text" class="validate"
-                [(ngModel)]="newTodo.description" required>
+                [(ngModel)]="pendingTodo.description" required>
                 <label for="description">Description</label>
             </div>
             <div class="input-field col s6">
                 <input type="checkbox" id="inProgress" 
-                [(ngModel)]="newTodo.inProgress" />
+                [(ngModel)]="pendingTodo.inProgress" />
                 <label for="inProgress">Item is in progress</label>
             </div>
         </div>
         <div class="row">
             <a class="waves-effect waves-light btn"
-            (click)="onSubmit(todo)">Create todo item</a>
+            (click)="createTodo(pendingTodo)">Create todo item</a>
         </div>
     </form>
 </div>
-<div class="s10 offset-s1 col">
-    <todo-detail *ngFor="#todo of Todos" (click)="onSelect()" [todo]="todo">
+<div class="s10 offset-s1 col" *ngFor="let todo of Todos">
+    <todo-detail (click)="onSelect(todo)" [todo]="todo">
     </todo-detail>
 </div>
