--- a/angular/src/main/app/todo/todo-detail.component.html
+++ b/angular/src/main/app/todo/todo-detail.component.html
@@ -10,8 +10,8 @@
       <p><label *ngIf="!todo.inProgress">Not Started</label></p>
     </div>
     <div class="card-action green-text">
-      <ng-timer  [format]="'mm:ss:SSS'">
-        (elapsedTime)="setElapsedTime($event)"
+      <ng-timer  [format]="'mm:ss:SSS'"
+            (elapsedTimeChange)="setElapsedTime($event)">
       </ng-timer>
       <!-- <a *ngIf="todo.inProgress" class="waves-effect btn-flat" (click)="pause(todo)">
         <i class="material-icons">pause_circle_outline</i>
